floating breadcrumb and navbar resize bugfix and z-index

--- a/Resources/Private/SASS/phlu.scss
+++ b/Resources/Private/SASS/phlu.scss
@@ -2291,7 +2291,7 @@ body {
       box-shadow: 0px 28px 31px 14px rgba(0, 0, 0, 0.03);
       -moz-box-shadow: 0px 28px 31px 14px rgba(0, 0, 0, 0.03);
       -webkit-box-shadow: 0px 28px 31px 14px rgba(0, 0, 0, 0.03);
-      z-index: 9;
+      z-index: 999;
       @include media-breakpoint-down("lg") {
         display: block;
         padding: 0;
