--- a/Resources/Public/Styles/phlu-all.css
+++ b/Resources/Public/Styles/phlu-all.css
@@ -9662,7 +9662,7 @@ body {
       box-shadow: 0px 28px 31px 14px rgba(0, 0, 0, 0.03);
       -moz-box-shadow: 0px 28px 31px 14px rgba(0, 0, 0, 0.03);
       -webkit-box-shadow: 0px 28px 31px 14px rgba(0, 0, 0, 0.03);
-      z-index: 9; }
+      z-index: 999; }
       @media (max-width: 1279px) {
         body .all .navbar {
           display: block;
